<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.EntradaNotasFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_grade_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/grade_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nota_1_fragment_entrada_notas"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:textSize="@dimen/txt_size_32sp"
                android:gravity="center"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_grade_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_grade_1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/grade_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nota_2_fragment_entrada_notas"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:textSize="@dimen/txt_size_32sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_grade_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_grade_2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/grade_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nota_3_fragment_entrada_notas"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:textSize="@dimen/txt_size_32sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_grade_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_grade_3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/grade_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nota_4_fragment_entrada_notas"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:textSize="@dimen/txt_size_32sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_calculate_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_calculate_average_fragment_entrada_notas"
            android:textSize="@dimen/txt_size_16sp"
            android:layout_marginTop="24dp"
            android:drawableEnd="@drawable/ic_calculate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_grade_4"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

